--- a/bower.json
+++ b/bower.json
@@ -10,9 +10,9 @@
     "components"
   ],
   "dependencies": {
-    "jquery": "~1.10.2",
+    "jquery": ">=1.7",
     "bootstrap": "~2.3.1 || ~3.3.4",
-    "underscore": "~1.4.4",
-    "moment": "2.x"
+    "underscore": ">=1.5.0",
+    "moment": ">= 2.6.0"
   }
 }
